--- a/coordinator-deployment.yaml
+++ b/coordinator-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           value: "10"
         - name: PRESTO_MAX_MEMORY_PER_NODE
           value: "1"
-        image: johandry/presto
+        image: ehallmark1122/presto
         livenessProbe:
           exec:
             command:
