--- a/worker-deployment.yaml
+++ b/worker-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           value: "1"
         - name : COORDINATOR
           value: "presto"
-        image: johandry/presto
+        image: ehallmark1122/presto
         livenessProbe:
           exec:
             command:
