--- a/coordinator-deployment.yaml
+++ b/coordinator-deployment.yaml
@@ -1,3 +1,17 @@
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: presto-pvc
+  labels:
+    name: presto-pvc
+spec:
+  storageClassName: managed-nfs-storage
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 10Gi
+---
 kind: Deployment
 apiVersion: apps/v1beta1
 metadata:
@@ -32,4 +46,11 @@ spec:
         name: presto-coordinator
         ports:
         - containerPort: 8080
+        volumeMounts:
+          - mountPath: "/var/lib/presto/data"
+            name: data-storage
+      volumes:
+      - name: data-storage
+        persistentVolumeClaim:
+          claimName: presto-pvc
       restartPolicy: Always
